# vnn

./: .gitignore  README.md  pyproject.toml
numpyro_examples/: Bayesian_LinearRegression.py  Bayesian_NN.py  SVI_NN_I.py  SVI_Tutorial_I.py
src/vnn/: activations.py  bagging.py  bnn.py  criteria.py  data.py  datasets.py  deep_ensemble.py  ensemble.py  fit.py  gen_plot.py  history.py  inference.py  initializers.py  layers.py  main.py  metrics.py  mlflow_logging.py  mlp.py  mve.py  plot.py  plots.py  plotting.py  priors.py  regularizers.py  xy.py
src/vnn/_mcmc/: __init__.py  _metropolis_hasting.py
src/vnn/cli/: deep_ensemble.py  mve.py  run_ensemble.py  run_many_ensembles.py  run_mcmc.py  run_mh.py  run_multiple_regularizers.py  run_nuts.py  run_regularizers_experiment.py  run_regularizers_multiprocessing.py
src/vnn/cli/plot/: plot_gaussian_process.py  plot_neural_network_priors.py
src/vnn/ensemble/: __init__.py  _ensemble.py  _modules.py  _parser.py  _regressor.py  _sklearn.py  _train.py  _usage.py
src/vnn/examples/: run_ensemble.py  run_mcmc.py
src/vnn/mcmc/: __init__.py  _probabilistic.py  pyro.py
src/vnn/mve/: __init__.py  _ensemble.py  _fit.py  _initializers.py  _modules.py  _priors.py  _sklearn.py  _train.py
src/vnn/sampling/: __init__.py  _distributions.py  _metropolis_hasting.py  _model.py  _nuts.py  _parser.py  _prob_model.py  _probmodel.py  _proposal.py  _pyro.py  example.py  pyro.py
