[project]
name = "vnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ramón Amézquita", email = "ramon.amezquita@relexsolutions.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.1",
    "jax>=0.8.1",
]

[project.scripts]
vnn = "vnn:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
