[project]
name = "vnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ramón Amézquita", email = "rameviz@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.1",
    "ipython>=9.8.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.7",
    "mlflow>=3.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
